# nudock

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  nudock.cpp  nudock.hpp
cmake/: NuDockConfig.cmake.in  nudock_config.hpp.in
schemas/: get_parameter_names.schema.json  log_likelihood.schema.json  log_likelihood_strict.schema.json  ping.schema.json  set_parameters.schema.json
tests/: CMakeLists.txt  client.cpp  server.cpp
